--- a/package.json
+++ b/package.json
@@ -36,4 +36,18 @@
       "last 1 safari version"
     ]
   }
+  "scripts": {
+    "start": "react-scripts start",
+    "predeploy": "npm run build", <----------- #1
+    "deploy": "gh-pages -d build", <---------- #2
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+{
+  "name": "starter-project",
+  "homepage": "https://tomerpacific.github.io/starter-project/", <----
+  "version": "0.1.0",
+  /....
+}
 }
