--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
 {
   "name": "starter-project",
-  "homepage": "https://tomerpacific.github.io/starter-project/", <----
+  "homepage": "https://Tbyrne23.github.io/starter-project/", <----
   "version": "0.1.0",
   /....
 }
