--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build", <----------- #1
-    "deploy": "gh-pages -d build", <---------- #2
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build", 
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
 {
   "name": "starter-project",
-  "homepage": "https://Tbyrne23.github.io/starter-project/", <----
+  "homepage": "https://Tbyrne23.github.io/starter-project/", 
   "version": "0.1.0",
-  /....
+  
 }
 }
